tests/parser/syntax-errors/token-not-found/expected_assign.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    i : int  0

# CHECK:      SyntaxError (line 4, column 14): token of kind TokenKind.ASSIGN not found.
# CHECK-NEXT: >>>    i : int  0
# CHECK-NEXT: >>>-------------^
